# authentipic

./: .gitignore  Makefile  README.md  pyproject.toml
backend/: .gitignore  Makefile  README.md  pyproject.toml
backend/config/: model_config.yaml
backend/scripts/: convert_model.py
backend/src/: run_api.py
backend/src/authentipic/: app.py  config.py  main.py  pipeline.py
backend/src/authentipic/annotation/: app.py  manager.py
backend/src/authentipic/converter/: converter.py
backend/src/authentipic/data/: base_dataset.py  dataset_factory.py  dfdc_dataset.py  faceforensics_dataset.py
backend/src/authentipic/inference/: predictor.py
backend/src/authentipic/scripts/: convert_model.py
backend/src/authentipic/training/: trainer.py
backend/src/scripts/: convert_model.py
config/: data_config.yaml
src/authentipic/: main.py
src/authentipic/config/: config.py  config.yml
src/authentipic/data/: base_dataset.py  dataset_factory.py  dfdc_dataset.py  faceforensics_dataset.py  make_dataset.py  preprocessed.py
src/authentipic/features/: build_features.py
src/authentipic/models/: model_factory.py  predict_model.py  train_model.py
src/authentipic/training/: trainer.py
