[tool.poetry]
name = "authentipic"
version = "0.1.0"
description = "AI-generated image detection system"
authors = ["Kotrina Keichline <authentipic@proton.me>"]
readme = "README.md"
packages = [{include = "authentipic", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.0"
torch = "^2.5.0"
torchvision = "^0.20.0"
albumentations = "^1.4.18"
opencv-python-headless = "^4.10.0.84"
pyyaml = "^6.0.2"
tqdm = "^4.66.5"
scikit-learn = "^1.5.2"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
kaggle = "^1.6.17"
pytest = "^8.3.3"
onnx = "^1.17.0"
onnx-tf = "^1.10.0"
flask = "^3.1.0"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
tensorboard = "^2.18.0"
tensorflow = "^2.18.0"
tensorflow-decision-forests = "^1.11.0"
tensorflowjs = "^4.22.0"
tf2onnx = "^1.16.1"
tensorflow-probability = "^0.25.0"
keras = "^3.8.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
mypy = "^1.12.0"
ruff = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
